--- a/package.json
+++ b/package.json
@@ -2,21 +2,12 @@
   "name": "react-native-sfsymbols",
   "version": "1.0.0",
   "description": "Use SF Symbols in iOS apps",
-  "main": "lib/index.js",
+  "main": "index.ios.tsx",
   "files": [
     "src",
-    "lib",
     "ios",
     "react-native-sfsymbols.podspec"
   ],
-  "scripts": {
-    "prepublish": "yarn run build",
-    "prettier": "prettier --write '**/*.{json,md,js,jsx,ts,tsx}'",
-    "lint": "yarn run eslint",
-    "eslint": "eslint --fix 'src/**/*.{ts,tsx}'",
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
     "sf",
     "symbols",
@@ -29,10 +20,6 @@
   ],
   "author": "Birkir Gudjonsson <birkir.gudjonsson@gmail.com>",
   "license": "MIT",
-  "peerDependencies": {
-    "react": "*",
-    "react-native": "*"
-  },
   "bugs": {
     "url": "https://github.com/birkir/react-native-sfsymbols/issues"
   },
@@ -41,14 +28,27 @@
     "type": "git",
     "url": "git+https://github.com/birkir/react-native-sfsymbols.git"
   },
+  "scripts": {
+    "prepublish": "yarn run build",
+    "prettier": "prettier --write '**/*.{json,md,js,jsx,ts,tsx}'",
+    "lint": "yarn run eslint",
+    "eslint": "eslint --fix 'src/**/*.{ts,tsx}'",
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*"
+  },
   "devDependencies": {
-    "@types/react": "^16.9.51",
     "@types/react-native": "^0.63.25",
+    "@types/react": "^16.9.51",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "eslint": "^7.10.0",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
+    "react-native": "^0.63.0",
     "typescript": "^4.0.3"
   }
 }
