--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "jsx": "react-native",
+    "jsx": "react",
     "module": "commonjs",
     "declaration": true,
     "esModuleInterop": true,
@@ -12,7 +12,6 @@
     "outDir": "lib"
   },
   "exclude": ["node_modules", "lib"],
-  "include": ["src"],
   "compileOnSave": false,
   "buildOnSave": false
 }
