--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "react-native-sfsymbols",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Use SF Symbols in iOS apps",
-  "main": "index.ios.tsx",
+  "main": "lib/index.ios.js",
+  "typings": "lib/index.d.ts",
   "files": [
     "src",
+    "lib",
     "ios",
     "react-native-sfsymbols.podspec"
   ],
