--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "jsx": "react-native",
+    "jsx": "react",
     "module": "commonjs",
     "declaration": true,
     "esModuleInterop": true,
