--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,17 +1,17 @@
 {
   "compilerOptions": {
-    "declaration": true,
+    "baseUrl": ".",
     "esModuleInterop": true,
     "jsx": "react-native",
     "lib": ["ESNext"],
     "module": "CommonJS",
-    "noEmitOnError": true,
-    "outDir": "./lib",
+    "noEmit": true,
+    "paths": {
+      "react-native-sfsymbols": ["../src"]
+    },
     "skipLibCheck": true,
-    "sourceMap": true,
     "strict": true,
     "target": "ESNext",
   },
-  "exclude": ["**/__tests__/*"],
   "include": ["src"]
 }
